@@ -231,80 +231,6 @@ bool MultiServer::start(
 	return true;
 }
 
-/**
- * @brief Start listening on the given file descriptor
- * @param fd
- * @return true on success
- */
-bool MultiServer::startFd(
-	int tcpFd, int webSocketFd, const QStringList &ignoredOptions)
-{
-	Q_ASSERT(m_state == STOPPED);
-	m_state = RUNNING;
-	if(!createServer(webSocketFd > 0)) {
-		return false;
-	}
-
-	for(const QString &ignoredOption : ignoredOptions) {
-		m_sessions->config()->logger()->logMessage(
-			Log()
-				.about(Log::Level::Warn, Log::Topic::Status)
-				.message(QStringLiteral("Command-line argument %1 ignored "
-										"because sockets are passed via %2")
-							 .arg(ignoredOption, initsys::name())));
-	}
-
-	if(!m_tcpServer->setSocketDescriptor(tcpFd)) {
-		m_sessions->config()->logger()->logMessage(
-			Log()
-				.about(Log::Level::Error, Log::Topic::Status)
-				.message("Couldn't set TCP server socket descriptor!"));
-		return abortStart();
-	}
-
-	int wsPort = -1;
-#ifdef HAVE_WEBSOCKETS
-	// Qt 5.12 deprecated setSocketDescriptor in favor of setNativeDescriptior,
-	// but then Qt 6 flipped those deprecations the other way round.
-#	if QT_VERSION >= QT_VERSION_CHECK(5, 12, 0) &&                            \
-		QT_VERSION < QT_VERSION_CHECK(6, 0, 0)
-	auto setWebSocketDescriptor = &QWebSocketServer::setNativeDescriptor;
-#	else
-	auto setWebSocketDescriptor = &QWebSocketServer::setSocketDescriptor;
-#	endif
-	if(m_webSocketServer) {
-		if(!(m_webSocketServer->*setWebSocketDescriptor)(webSocketFd)) {
-			m_sessions->config()->logger()->logMessage(
-				Log()
-					.about(Log::Level::Error, Log::Topic::Status)
-					.message(
-						"Couldn't set WebSocket server socket descriptor!"));
-			return abortStart();
-		}
-		wsPort = m_webSocketServer->serverPort();
-	}
-#endif
-
-	m_port = m_tcpServer->serverPort();
-	updateInternalConfig();
-
-	emit serverStarted();
-	m_sessions->config()->logger()->logMessage(
-		Log()
-			.about(Log::Level::Info, Log::Topic::Status)
-			.message(
-				wsPort == -1
-					? QStringLiteral("Started listening on passed TCP socket "
-									 "on port %1, WebSocket not passed")
-						  .arg(m_port)
-					: QStringLiteral("Started listening on passed TCP socket "
-									 "on port %1, WebSocket port %2")
-						  .arg(m_port)
-						  .arg(wsPort)));
-
-	return true;
-}
-
 void MultiServer::assignRecording(Session *session)
 {
 	QString filename = m_recordingPath;
