@@ -52,9 +52,6 @@ public:
 
 	Q_INVOKABLE bool isRunning() const { return m_state != STOPPED; }
 
-	//! Start the server with the given descriptors, -1 to disable WebSocket
-	bool startFd(int tcpFd, int webSocketFd, const QStringList &ignoredOptions);
-
 	SessionServer *sessionServer() { return m_sessions; }
 
 	ServerConfig *config() { return m_config; }
