@@ -1,12 +1,0 @@
-[Unit]
-Description=Drawpile dedicated server socket
-Documentation=man:@srvname@(1)
-After=network.target
-
-[Socket]
-ListenStream=@DRAWPILE_PROTO_DEFAULT_PORT@
-@webadmin_stream@
-@websocket_stream@
-
-[Install]
-WantedBy=sockets.target
